--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div>
-            <h3>Made by Kalvian ❤️</h3>
+            <h3>Made by Pranshu ❤️</h3>
         </div>
         <div class="flex" id="result">
             <div id="message"></div>
